--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "GooseFinance",
-  "name": "GooseFinance",
+  "short_name": "ClawlySwap",
+  "name": "ClawlySwap",
   "icons": [
     {
       "src": "./logo.png",
